# Vanchor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  config.yml  conftest.py  docker-compose.yml  e2e_smoke.py  index.md  pyproject.toml  release.ps1  requirements-dev.txt  requirements.txt  shot.py  uitest.py  vanchor.example.yaml
.github/workflows/: ci.yml  docker-release.yml  fuzz.yml  image.yml  package.yml  regression.yml  release.yml  soak.yml
.superpowers/sdd/adoption/: task-6-report.md
.superpowers/sdd/ux/: task-1-report.md
3d/gearbox/: BearingSpacer.stl  BoxHolder.stl  CaseBottom.stl  CaseTop.stl  Gear1_12T.stl  Gear1_2_6T.stl  Gear2_18T.stl  Gear3_36T.stl  Gear3_36T_Shaft.stl  JunctionBox.stl  JunctionBoxLid.stl  StepperCover.stl  StepperGear.stl  StepperGear_6T.stl  TrollingMotorHolder-25.4mm.stl
arduino/TrollingMotorController/: TrollingMotorController.ino
cad/: README.md  enclosure.py  make_renders.py  make_section.py  render.py  steering.py  steering_BOM.md  steering_REVIEW.md
cad/ai/: README.md  servo.py
cad/ai2/: README.md  servo.py
cad/models/: Bottom.stl  EngineGear.stl  ShaftAdapter.stl  ShaftGear.stl  Top.stl
deploy/image/: README.md  build.sh  config.template
deploy/image/stage-vanchor/: prerun.sh
docs/: FEATURES.md  README.md  adding-a-device.md  analysis.md  anchor-ml.md  api-contract.md  architecture.md  assumptions.md  community-plan.md  config.md  connectors.md  custom-hardware.md  deploy-pi.md  diagram.drawio  extension-packs.md  firmware.md  getting-started.md  image-testing.md  nav-control-api.md  pid-tuning.md  push-notifications.md  roadmap.md  routing-weather-api.md  safety-matrix.md  setup-wizard.md  sim-vs-real.md  simulator-options.md  simulator.md  testing-and-workflow.md  ublox-m9n-fusion.md  ui-contract.md  ui-redesign.md
docs/api/: README.md  analysis.md  app.md  controller.md  core.md  hardware.md  index.html  nav.md  search.js  sim.md  ui.md  vanchor.html
docs/api/vanchor/: analysis.html  app.html  controller.html  core.html  hardware.html  nav.html  sim.html  ui.html
docs/concept/: index.html  main.js
docs/design/: pack-framework.md  prior-art-lessons-2026-07.md  ux-revamp-concepts-2026-07.md  ux-review-2026-07.md
docs/llms/: README.md  api.md  architecture.md  backend.md  device-drivers.md  frontend.md  simulation.md  testing-and-workflow.md
docs/modes/: README.md  along-contour.md  anchor-alarm.md  anchor-hold.md  contour-follow.md  drift.md  follow-apb.md  heading-hold.md  manual.md  orbit.md  route.md  survey.md  trolling.md  work-area.md
docs/research/: anchor-rl-literature.md  connectivity.md  depth-map-design.md  physics-damping.md  physics-environment.md  physics-eom-coriolis.md  physics-integration-params.md  physics-propulsion.md  rc-servo-steering.md  smart-routing.md
experiments/anchor_policy/: README.md  bc_init.py  env.py  eval.py  finetune.py  phase2.sh  policy.py  scenarios.py  train.py
firmware/: README.md
firmware/common/: protocol_vectors.txt  vanchor_protocol.h
firmware/engine/: engine.ino
firmware/hotrc_translator/: README.md  hotrc_translator.ino
firmware/steering/: steering.ino
firmware/steering/tests/: .gitignore  Makefile  test_parse_cmd.cpp
routes/: route3.gpx
scripts/: bump_version.py  check_shell_manifest.py  gen_api_docs.py  gen_imager_json.py  install.sh  make_bundle.py  mock_lake_depthmap.py  record_guide.py  record_guide_clips.py  regression_check.py  restore.sh  soak.py  take_screenshots.py  test_ci_regression.py  vanchor.service  wifi.sh
src/: config.yml  requirements.txt  vanchor.py
src/routes/: route1.gpx  route2.gpx
src/vanchor/: __init__.py  app.py  discovery.py  push.py  supervisor_client.py  tls.py  wifi.py
src/vanchor/analysis/: __init__.py  __main__.py  fossen_calibrate.py  metrics.py  report.py  runner.py  scenarios.py  tune.py  tuning.py
src/vanchor/connectors/: __init__.py  base.py  context.py  metrics.py  nmea2000.py  nmea_tcp.py  registry.py  rf_remote.py
src/vanchor/controller/: __init__.py  anchor_leif.json  anchor_ml.py  anchor_policy.json  calibration.py  controller.py  estimator.py  modes.py  safety.py
supervisor/: README.md  guard.py  install.sh  vanchor-supervisor.service
supervisor/vanchor_supervisor/: __init__.py  __main__.py  api.py  backends.py  backup.py  bundles.py  config.py  core.py  devicepolicy.py  disk.py  sdnotify.py  selfupdate.py  versionspec.py
tests/: conftest.py  harness.py  supervisor_fakes.py  test_alert_log.py  test_analysis.py  test_anchor_alarm.py  test_anchor_leffe.py  test_anchor_leif.py  test_anchor_ml.py  test_anchor_ml_v2.py  test_anchor_radius.py  test_api.py  test_azimuth_stationkeep.py  test_backup.py  test_battery_driver.py  test_battery_rtl.py  test_blackbox.py  test_boat.py  test_boat_profiles.py  test_calibration.py  test_chaos.py  test_charts.py  test_client_rum.py  test_config.py  test_config_lockout.py  test_connector_settings.py  test_connectors_core.py  test_connectors_runtime.py  test_contour_follow.py  test_contour_route.py  test_contract.py  test_debug_recorder.py  test_demo.py  test_depth.py  test_depth_at.py  test_depth_grid.py  test_depth_import.py  test_depth_interp.py  test_depth_radiate.py  test_depth_routing.py  (+120 more)
tests/data/: water_sim.geojson
tests/hil/: __init__.py  conftest.py  test_bench_example.py
vanchor/: __init__.py
vanchor/devices/: __init__.py  compass.py  controller.py  nmea.py  nmea_net.py  nmea_reader.py  stepper.py
vanchor/functions/: holdheading.py
vanchor/resources/: __init__.py  config.py  data.py  device_manager.py  events.py  main.py
vanchor/web/: __init__.py
www/static/: common.js  config.js
www/templates/: index.html
(+239 files in other folders)
