[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vanchor-ng"
version = "1.0.0a0"
description = "Software-first GPS anchoring / autopilot for cheap trolling motors (modern rewrite)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",  # file uploads (POST /api/restore)
    "numpy>=1.24",        # Fossen 3-DOF boat model (sim model="fossen")
    "pyyaml>=6.0",        # YAML config files
    "orjson>=3.9",        # fast depth-chart JSON (de)serialisation (graceful fallback)
]

[project.optional-dependencies]
# Smart "Take me here" water routing (OSM water geometry -> waypoints). All
# install from prebuilt aarch64 wheels (no compilation).
routing = ["shapely>=2.0", "networkx>=3.0", "pyproj>=3.5", "requests>=2.28"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27",
       "shapely>=2.0", "networkx>=3.0", "pyproj>=3.5", "requests>=2.28"]
# Plots for the analysis framework (text/CSV reports work without it):
analysis = ["matplotlib>=3.7"]
# Real serial hardware support (not needed for simulation):
serial = ["pyserial>=3.5", "pyserial-asyncio>=0.6"]

[project.scripts]
vanchor = "vanchor.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the trained tiny anchor-policy weights alongside the controller.
"vanchor.controller" = ["anchor_policy.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
