[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vanchor-ng"
version = "1.5.0a6"
description = "Software-first GPS anchoring / autopilot for cheap trolling motors (modern rewrite)"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",  # file uploads (POST /api/restore)
    "numpy>=1.24",        # Fossen 3-DOF boat model (sim model="fossen")
    "pyyaml>=6.0",        # YAML config files
    "orjson>=3.9",        # fast depth-chart JSON (de)serialisation (graceful fallback)
    "pygeomag>=1.1",      # full WMM2025 magnetic declination (nav.wmm; degree-2 fallback)
    "zeroconf>=0.130",    # mDNS/Bonjour discovery so clients auto-find vanchor.local
]

[project.optional-dependencies]
# Smart "Take me here" water routing (OSM water geometry -> waypoints). All
# install from prebuilt aarch64 wheels (no compilation).
routing = ["shapely>=2.0", "networkx>=3.0", "pyproj>=3.5", "requests>=2.28"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27",
       "hypothesis>=6",  # property/fuzz tests (tests/test_nmea_fuzz.py)
       "scipy>=1.10",     # Fossen auto-calibration (tests/test_fossen_calibrate.py)
       "shapely>=2.0", "networkx>=3.0", "pyproj>=3.5", "requests>=2.28"]
# Plots for the analysis framework (text/CSV reports work without it):
analysis = ["matplotlib>=3.7"]
# Real serial hardware support (not needed for simulation):
serial = ["pyserial>=3.5", "pyserial-asyncio>=0.6"]
# WitMotion HWT901B-TTL AHRS compass (compass_source="hwt901b"). Until the lib is
# published, install the sibling checkout: pip install -e ../python-hwt901b-ttl[serial]
hwt901b = ["hwt901b[serial]>=0.1"]
# Auto-generated Markdown API reference from docstrings (make docs):
docs = ["pydoc-markdown>=4"]

[project.scripts]
vanchor = "vanchor.app:main"

# Driver-pack discovery (roadmap #43). A pip-installed community driver pack
# advertises a zero-arg registration hook under this group; vanchor loads and
# calls each one at startup (see vanchor.hardware.drivers.load_drivers) so the
# pack's drivers self-register with no core edit. Example, in a pack's pyproject:
#
#   [project.entry-points."vanchor.drivers"]
#   my_sonar = "my_pack:register"   # register() calls registry.register_context_driver(...)
#
# Core ships no built-in entry points here (its drivers are in-tree); the group
# exists purely for external packs and discovery no-ops when none are installed.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the trained tiny anchor-policy weights alongside the controller.
"vanchor.controller" = ["anchor_policy.json", "anchor_leif.json"]
# The PWA shell: static assets + the HTML partials index.html is assembled from
# at serve time. (Editable installs read the source tree; this is for wheels.)
"vanchor.ui" = ["static/**/*", "partials/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 120
# Browser end-to-end tests (Playwright) are opt-in: they launch a server + a
# real Chromium and are slow, so the default suite excludes them. Run them with
# `pytest -m e2e` (the browser-e2e CI job does this).
addopts = "-m 'not e2e'"
markers = [
    "e2e: browser end-to-end tests (Playwright); opt-in, run with -m e2e",
]

[tool.mypy]
# Pragmatic (NOT --strict) type checking, currently scoped to the safety-
# critical core/ + controller/ packages (roadmap #12). Run with:
#   mypy src/vanchor/core src/vanchor/controller
python_version = "3.12"
ignore_missing_imports = true   # optional deps (numpy, shapely, ...) ship no stubs
warn_unused_ignores = true      # keep the `# type: ignore` list honest
warn_redundant_casts = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Correctness-focused baseline: syntax errors (E9) + pyflakes (F).
# F401 (unused imports) and F841 (unused variables) are excluded because the
# codebase has 19 + 1 existing instances that will be cleaned up separately.
select = ["E9", "F"]
ignore = ["F401", "F841"]
